--- a/app/views/partial/_header.html.erb
+++ b/app/views/partial/_header.html.erb
@@ -1,7 +1,10 @@
 <header class="header">
   <nav class="nav">
     <ul class="header_menu">
-      <li class="nav-link">〇〇さん</li>
+
+      <%# この行を編集%>
+      <li class="nav-link"><%= current_user.name %>さん</li>
+
       <li class="header_menu_title"><%= link_to "kanban", root_path, class: "nav-link" %></li>
       <li>
         <ul class="header_menu_inner">
@@ -12,7 +15,7 @@
               <i class="fas fa-edit"></i>
             <% end %>
           </li>
-          <li><%= link_to "サインアウト", "#", class: "nav-link" %></li>
+          <li><%= link_to "サインアウト", destroy_user_session_path, class: "nav-link", method: :delete %></li>
         </ul>
       </li>
     </ul>
